--- a/qr-generator/src/main/resources/application.yml
+++ b/qr-generator/src/main/resources/application.yml
@@ -7,10 +7,12 @@ server:
       charset: utf-8
       enabled: true
 
-
 spring:
   application:
     name: qr-generator
+  config:
+    import:
+      - secret.yml
 
   servlet:
     multipart:
@@ -54,6 +56,7 @@ server:
     activate:
       on-profile:
         - prod
+  port: 8082
 
 spring:
   config:
