--- a/swagger-restdoc/.gitignore
+++ b/swagger-restdoc/.gitignore
@@ -1,4 +1,4 @@
-
+README.md
 .gradle
 build/
 !gradle/wrapper/gradle-wrapper.jar
@@ -26,10 +26,6 @@ out/
 !**/src/main/**/out/
 !**/src/test/**/out/
 
-secret.yml
-secrets.tar.gz
-secrets_base64.txt
-
 ### NetBeans ###
 /nbproject/private/
 /nbbuild/
@@ -39,9 +35,6 @@ secrets_base64.txt
 
 ### VS Code ###
 .vscode/
-
-### JTE ###
-/jte-classes/
 
 ### Kotlin ###
 .kotlin
