--- a/tawilwind-jte-template/package.json
+++ b/tawilwind-jte-template/package.json
@@ -1,4 +1,8 @@
 {
+  "scripts": {
+    "build": "npx @tailwindcss/cli -i ./input.css -o ./src/main/resources/static/output.css --minify",
+    "watch": "npx @tailwindcss/cli --watch -i ./input.css -o ./src/main/resources/static/output.css --minify"
+  },
   "dependencies": {
     "@tailwindcss/cli": "^4.1.7",
     "tailwindcss": "^4.1.7"
